--- a/frontend/src/components/Layout/Header.module.css
+++ b/frontend/src/components/Layout/Header.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 5rem;
-    background-color: #8a2b06;
+    background-color: #8a00ca;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -12,4 +12,13 @@
     padding: 0 10%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 10;
+  }
+
+  .logo h1 {
+    display: inline;
+  }
+  .logo img {
+    margin-right: 1rem;
+    height: 30px;
+    width: 30px;
   }
