--- a/frontend/src/components/Game/Board.module.css
+++ b/frontend/src/components/Game/Board.module.css
@@ -1,3 +1,21 @@
+.divrow {
+    display: table;
+    width: 100%; /*Optional*/
+    justify-content: evenly;
+}
+.divcolumnsm {
+    width: 100px;
+    display: table-cell;
+}
+.divcolumn {
+    width: 400px;
+    display: table-cell;
+}
+
+.board {
+    
+}
+
 .grid {
     
 }
@@ -6,4 +24,20 @@
     display: inline-block;
     padding: 0;
     margin: auto;
+}
+
+.red {
+    color: red;
+}
+
+.blue {
+    color: blue;
+}
+
+.green {
+    color: green;
+}
+
+.yellow {
+    color: yellow;
 }
