--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   background-color: rgb(80, 80, 80);
-  background-image: url('./assets/background.jpg');
+  background-image: url(./assets/sprites/Tiles/Home-01.png);
+  background-size: 1920px 1080px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
