Implemented pickups in both front and backend

--- a/frontend/src/components/Game/Tile.module.css
+++ b/frontend/src/components/Game/Tile.module.css
@@ -33,6 +33,12 @@
 }
 
 
+.tile.pickup {
+    background-image: url(../../assets/sprites/Pickups/health.png);
+    background-size: 2rem 2rem;
+}
+
+
 
 .tile.redwreck {
     background-image: url(../../assets/sprites/Red/wreckRed.png);
